ROS_Workspace/src/log/build_2023-09-08_13-13-13/UGV1Main/stderr.log
  File "/home/teamvision/Desktop/ROS_Workspace/Honours_a1797823_a1764124/ROS_Workspace/src/install/UGV1Main/lib/python3.8/site-packages/UGV1Main/UGV1Main.py", line 11
    from custom_msgs.msg import Policy.srv as Policysrv
                                      ^
SyntaxError: invalid syntax

